position assessment two - bali

--- a/2-positions/position-index.html
+++ b/2-positions/position-index.html
@@ -26,7 +26,18 @@
                 <p>Follows all Max safety measures to ensure your food is safe</p>
             </div>
         </div>
-
     </div>
+    <br>
+    <br>
+    <br>
+    <div class="bali-box">
+        <img class="bali-img" src="https://source.unsplash.com/1600x1000/?bali" alt="Bali">
+        <p class="bali-title">Explore the diversities in Bali</p>
+        <p class="bali-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+        <button class="bali-explore-btn">Explore Now</button>
+    </div>
+    <br>
+    <br>
+    <br>
 </body>
 </html>
