position assessment three, four - zomato, profile

--- a/2-positions/position-index.html
+++ b/2-positions/position-index.html
@@ -39,5 +39,25 @@
     <br>
     <br>
     <br>
+    <div class="zomato-box">
+        <img class="zomato-img" src="https://source.unsplash.com/1600x1000/?zomato" alt="zomoto image">
+        <p class="zoma-name">zomato</p>
+        <p class="zoma-desc">Discover the best food & drinks in Lucknow</p>
+        <div class="zoma-search">
+
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="profile-box">
+        <img class="profile-bg-img" src="https://source.unsplash.com/1600x1000/?profile background" alt="profile bgimage">
+        <img class="profile-img" src="https://source.unsplash.com/1600x1000/?profile" alt="profile img">
+        <p class="profile-name">Saravana Kumar</p>
+        <p class="profile-desc">Full Stack Developer</p>
+    </div>
+    <br>
+    <br>
+    <br>
 </body>
 </html>
