position assessment three - zomato search bar

--- a/2-positions/position-index.html
+++ b/2-positions/position-index.html
@@ -40,10 +40,18 @@
     <br>
     <br>
     <div class="zomato-box">
-        <img class="zomato-img" src="https://source.unsplash.com/1600x1000/?zomato" alt="zomoto image">
+        <img class="zomato-img" src="https://source.unsplash.com/1600x1000/?zomato dark" alt="zomoto image">
         <p class="zoma-name">zomato</p>
         <p class="zoma-desc">Discover the best food & drinks in Lucknow</p>
-        <div class="zoma-search">
+        <div class="zoma-search-box">
+            <div class="zoma-search-indise-align">
+                <img class="zoma-location-icon" src="images/location-1.jpeg" alt="location img">
+                <p class="zoma-location-name">Chennai</p>
+                <img class="zoma-trio-icon" src="images/triangle.png" alt="zoma-tri-icon">
+                <div class="zoma-vertical-lign"></div>
+                <img class="zoma-search-icon" src="images/search.png" alt="search icon">
+                <p class="zoma-search-content">Search for restaurant, cuisine or a dish</p>
+            </div>
 
         </div>
     </div>
