air bnb and images updated

--- a/2-positions/position-index.html
+++ b/2-positions/position-index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="restaurant-box-model">
         <div class="rest-header">
-            <img class="rest-image" src="https://source.unsplash.com/1600x1000/?restaurant" alt="restaurant image">
+<!--            <img class="rest-image" src="https://source.unsplash.com/1600x1000/?restaurant" alt="restaurant image">-->
+            <img class="rest-image" src="images/resturant.jpg" alt="restaurant image">
             <p class="rest-promotion">Promoted</p>
             <p class="rest-offer">50% OFF up to 100</p>
             <p class="rest-time">38 min</p>
@@ -31,7 +32,8 @@
     <br>
     <br>
     <div class="bali-box">
-        <img class="bali-img" src="https://source.unsplash.com/1600x1000/?bali" alt="Bali">
+<!--        <img class="bali-img" src="https://source.unsplash.com/1600x1000/?bali" alt="Bali">-->
+        <img class="bali-img" src="images/bali.jpg" alt="Bali">
         <p class="bali-title">Explore the diversities in Bali</p>
         <p class="bali-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         <button class="bali-explore-btn">Explore Now</button>
@@ -40,7 +42,8 @@
     <br>
     <br>
     <div class="zomato-box">
-        <img class="zomato-img" src="https://source.unsplash.com/1600x1000/?zomato dark" alt="zomoto image">
+<!--        <img class="zomato-img" src="https://source.unsplash.com/1600x1000/?zomato dark" alt="zomoto image">-->
+        <img class="zomato-img" src="images/zom.jpg" alt="zomoto image">
         <p class="zoma-name">zomato</p>
         <p class="zoma-desc">Discover the best food & drinks in Lucknow</p>
         <div class="zoma-search-box">
@@ -59,8 +62,10 @@
     <br>
     <br>
     <div class="profile-box">
-        <img class="profile-bg-img" src="https://source.unsplash.com/1600x1000/?profile background" alt="profile bgimage">
-        <img class="profile-img" src="https://source.unsplash.com/1600x1000/?profile" alt="profile img">
+<!--        <img class="profile-bg-img" src="https://source.unsplash.com/1600x1000/?profile background" alt="profile bgimage">-->
+        <img class="profile-bg-img" src="images/proback.jpg" alt="profile bgimage">
+<!--        <img class="profile-img" src="https://source.unsplash.com/1600x1000/?profile" alt="profile img">-->
+        <img class="profile-img" src="images/profile.jpg" alt="profile img">
         <p class="profile-name">Saravana Kumar</p>
         <p class="profile-desc">Full Stack Developer</p>
     </div>
