--- a/3-felx-airbnbclone/airbnbclone-index.html
+++ b/3-felx-airbnbclone/airbnbclone-index.html
@@ -55,9 +55,64 @@
             <svg xmlns="http://www.w3.org/2000/svg" class="left-arrow" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none;
             height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                 <path fill="none" d="m12 4 11.3 11.3a1 1 0 0 1 0 1.4L12 28"/></svg>
-            <svg xmlns="http://www.w3.org/2000/svg" class="left-arrow" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none;
+            <div class="loca-item-1">
+                <img class="loca-item-1-img" src="assets/i1.jpeg" alt="loca-item-1">
+                <p  class="loca-item-1-text">Vineyards</p>
+            </div>
+            <div class="loca-item-1">
+                <img class="loca-item-1-img" src="assets/i1.jpeg" alt="loca-item-1">
+                <p  class="loca-item-1-text">Vineyards</p>
+            </div>
+            <div class="loca-item-1">
+                <img class="loca-item-1-img" src="assets/i1.jpeg" alt="loca-item-1">
+                <p  class="loca-item-1-text">Vineyards</p>
+            </div>
+            <div class="loca-item-1">
+                <img class="loca-item-1-img" src="assets/i1.jpeg" alt="loca-item-1">
+                <p  class="loca-item-1-text">Vineyards</p>
+            </div>
+            <div class="loca-item-1">
+                <img class="loca-item-1-img" src="assets/i1.jpeg" alt="loca-item-1">
+                <p  class="loca-item-1-text">Vineyards</p>
+            </div>
+            <div class="loca-item-1">
+                <img class="loca-item-1-img" src="assets/i1.jpeg" alt="loca-item-1">
+                <p  class="loca-item-1-text">Vineyards</p>
+            </div>
+            <div class="loca-item-1">
+                <img class="loca-item-1-img" src="assets/i1.jpeg" alt="loca-item-1">
+                <p  class="loca-item-1-text">Vineyards</p>
+            </div>
+            <div class="loca-item-1">
+                <img class="loca-item-1-img" src="assets/i1.jpeg" alt="loca-item-1">
+                <p  class="loca-item-1-text">Vineyards</p>
+            </div>
+            <div class="loca-item-1">
+                <img class="loca-item-1-img" src="assets/i1.jpeg" alt="loca-item-1">
+                <p  class="loca-item-1-text">Vineyards</p>
+            </div>
+            <div class="loca-item-1">
+                <img class="loca-item-1-img" src="assets/i1.jpeg" alt="loca-item-1">
+                <p  class="loca-item-1-text">Vineyards</p>
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" class="right-arrow" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none;
             height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                 <path fill="none" d="m12 4 11.3 11.3a1 1 0 0 1 0 1.4L12 28"/></svg>
+
+            <div class="filter-items">
+                <svg xmlns="http://www.w3.org/2000/svg" class="filter-img" viewBox="0 0 16 16" style="display:block;
+                    height:14px;width:14px;fill:currentColor" aria-hidden="true" role="presentation" focusable="false">
+                    <path d="M5 8a3 3 0 0 1 2.83 2H14v2H7.83A3 3 0 1 1 5 8zm0 2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm6-8a3 3 0 1 1-2.83 4H2V4h6.17A3 3 0 0 1 11 2zm0 2a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/></svg>
+                <p class="filter-text">Filters</p>
+            </div>
+
+            <div class="tax-items">
+                <p class="display-taxes-text">Display total before taxes</p>
+<!--                For now i'm using toggle image-->
+                <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" fill="currentColor" class="bi bi-toggle-off toggle-img" viewBox="0 0 16 16">
+                    <path d="M11 4a4 4 0 0 1 0 8H8a4.992 4.992 0 0 0 2-4 4.992 4.992 0 0 0-2-4zm-6 8a4 4 0 1 1 0-8 4 4 0 0 1 0 8M0 8a5 5 0 0 0 5 5h6a5 5 0 0 0 0-10H5a5 5 0 0 0-5 5"/>
+                </svg>
+            </div>
         </div>
     </div>
 
